[project]
name = "comfy-workflow"
version = "0.1.0"
description = "Z-Image Turbo -> Qwen-Image-Layered -> Qwen2.5-VL GGUF pipeline via ComfyUI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "huggingface-hub>=0.25.0",
    # llama-cpp-python is installed via setup.sh with Metal flags
]

[project.scripts]
serve = "server:main"

[dependency-groups]
dev = []
