[project]
name = "comfy-workflow-apple-silicon"
version = "0.1.0"
description = "Z-Image Turbo -> Qwen-Image-Layered GGUF -> Qwen2.5-VL GGUF pipeline server (Apple Silicon / MPS)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "Pillow>=10.0.0",
    "huggingface-hub>=0.25.0",
    "gguf>=0.6.0",
    "transformers>=4.51.3,<5.0",
    "accelerate>=0.30.0",
    "sentencepiece>=0.2.0",
    "diffusers @ git+https://github.com/huggingface/diffusers",
]

[project.scripts]
serve = "server:main"

[dependency-groups]
dev = []
